# swarm

./: .env_sample  01-Basic-Tutorial.ipynb  README.md  agents.py  main.py  pyproject.toml  requirements.txt
examples/basic/: README.md
examples/personal_shopper/: README.md
examples/support_bot/: README.md
examples/triage_agent/: README.md
examples/weather_agent/: README.md
pages/: 01_PROMPTS.py
prompts/: critic.txt  research.txt  supervisor.txt  writer.txt
